added the difference.js and filter.js script tags in index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="index.js"></script>
     <script src="print.js"></script>
     <script src="last.js"></script>
+    <script src="difference.js"></script>
+    <script src="filter.js"></script>
 
 </body>
 
